--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="full-height">
 <head>
   <meta charset="utf-8">
-  <title>LandingPage</title>
+  <title>Qumi Soft Jakub Kumięga</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
