ustawienie nagłówka strony dynamicznie na podstawie danych z bazy

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,10 @@
 <html lang="pl">
 <head>
   <meta charset="utf-8">
-  <title>Qumi Soft Jakub Kumięga</title>
+  <title></title>
+  <meta name="description" content="">
+  <meta name="author" content="Jakub Kumięga">
+  <meta name="keywords" content="">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
